config/zabbix/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zabbix
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
