config/zabbix/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zabbix
  namespace: zabbix
  annotations:
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.zabbix.svc.cluster.local:4180/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://monitor.newjoy.ro/oauth2/start?rd=https://$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email,X-Auth-Request-Preferred-Username,X-Auth-Request-Groups
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
spec:
  ingressClassName: nginx
  rules:
    - host: monitor.newjoy.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zabbix-web
                port:
                  number: 80
